[package]
name = "lerp"
version = "0.1.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
description = "Generic linear interpolation and extrapolation, automatically implemented for a variety of numeric types."
repository = "https://github.com/coriolinus/lerp-rs"
readme = "README.md"
license = "MIT"

[dependencies]
num-traits = "0.1.34"
