[package]
name = "lerp"
version = "0.5.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
description = "Generic linear interpolation and extrapolation, automatically implemented for a variety of numeric types."
repository = "https://github.com/coriolinus/lerp-rs"
documentation = "https://coriolinus.github.io/lerp-rs/"
readme = "README.md"
license = "MIT"
keywords = ["lerp", "math", "interpolate", "extrapolate", "numeric"]
edition = "2018"

[dependencies]
num-traits = "0.2"
lerp_derive = { version = "0.4.0", optional = true }

[features]
default = []
derive = ["lerp_derive"]

[workspace]
members = ["lerp_derive"]
