[package]
name = "lerp_derive"
version = "0.1.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
description = "Generic linear interpolation and extrapolation, automatically implemented for a variety of numeric types."
repository = "https://github.com/coriolinus/lerp-rs"
documentation = "https://coriolinus.github.io/lerp-rs/"
readme = "README.md"
license = "MIT"
keywords = ["lerp", "math", "interpolate", "extrapolate", "numeric"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
